--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,21 @@
   "authorUrl": "https://github.com/atlas-app",
   "minAtlasVersion": "1.0.0",
   "permissions": ["network", "storage", "filesystem", "core:locations"],
-  "main": "main.js"
+  "main": "main.js",
+  "requiredApiKeys": [
+    {
+      "id": "maptiler",
+      "name": "MapTiler API Key",
+      "description": "Required for downloading map tiles and styles for offline use",
+      "signupUrl": "https://cloud.maptiler.com/account/keys",
+      "required": true
+    },
+    {
+      "id": "google_maps",
+      "name": "Google Maps API Key",
+      "description": "Required for geocoding (converting addresses to coordinates)",
+      "signupUrl": "https://console.cloud.google.com/apis/credentials",
+      "required": true
+    }
+  ]
 }
