--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "name": "Maps",
   "version": "1.0.0",
   "description": "Offline maps with downloadable regions",
-  "author": "Atlas",
-  "authorUrl": "https://github.com/atlas-app",
+  "author": "Ryan-Milton",
+  "authorUrl": "https://github.com/Ryan-Milton",
   "minAtlasVersion": "1.0.0",
   "permissions": ["network", "storage", "filesystem", "core:locations"],
   "main": "main.js",
